[package]
name = "supersonic"
version = "0.1.0"
authors = ["root <287494524@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serde]
optional = true
version = "=1.0.118"
default-features = false
features = ["std", "derive"]

[dependencies.classygroup]
optional = true
git = "https://github.com/3for/classygroup"


[dependencies.class_group]
optional = true
git = "https://github.com/ZenGo-X/class"

[features]
default = ["class_group_sti"]
class_group_sti = ["serde", "classygroup"]
class_group_zen = ["class_group"]
rsa_group = []